🐛 FIX: Card overflow with long text

--- a/public/assets/css/base/_base.css
+++ b/public/assets/css/base/_base.css
@@ -281,6 +281,7 @@ input[type='file']::file-selector-button {
 	transition: box-shadow 0.3s;
 	display: flex;
 	flex-direction: column;
+	min-width: 0;
 }
 
 .card,
